1.0 "Asieoniezi"

0.127 "TBA"
 425993 Program crashes when downloading new headers (Drew Yavor)
 424248 In --nogui mode, exit when the last task finishes. (Eric Lauriault)
 427165 Task pane's ETA goes crazy on new xover tasks (Charles)

0.126 "Demon Sweat"
 420618 Decode in a worker thread for faster GUI/network (Calin Culanu)
 423376 Status Bar's "tasks" and "log" buttons toggle the windows (Walt)
 411446 Use `Message-ID', not `Message-Id', when posting (Charles)
 411447 Header pane loses selection when deleting articles (Jeff Berman)
 411657 Post window's cursor appears in the wrong place (Frank Tabor)
 411659 post window's "save draft" file dialog gets confused (Charles)
 411959 profile's `Reply-To' header used wrong in 0.125 (Mimi Doucet)
 423684 Latest glib issues "memory warnings" on startup (SciFi)

0.125 "Potzrebie"
 408767 connection-limit change not recognized until restart (Chuck)
 408778 0.124 bug: signature "command" executed twice (Jack Cuyler)
 408866 0.124 bug: error with the signature delimiter (Mimi Doucet)
 408990 0.124 bug: no more line break at 80 characters (longint)
 371868 add common headers to `more headers' in post window (Frederic Crozat)

0.124 "Goblin Worlds"
 370195 0.123 mime decoding errors (Walt)
 404833 marking a group as read doesn't stick between sessions (Frank Tabor)
 406284 array bounds read in StringView::strchr (Bruno Barberi Gnecco)
 403762 pasted text isn't wrapped automatically (Artur Jachacy)
 121178 built-in editor wraps text improperly when composing (Carl Hudkins)
 405765 some multiparts aren't grouped properly (Konrad Karl)
 360376 go to next unread-group should be circular (Frederic Crozat)
 406248 make it easier to find previously-read context (Jack Spaar)
 346915 post window's profile list should show email addresses (Artur Jachacy)
 405637 give the save button focus in the save dialog (Chris Petersen)

0.123 "El Nuevo Barretto"
 404515 0.122 build problems in `po' (Pteer)