@@ -3,7 +3,8 @@
 0.127 "TBA"
  425993 Program crashes when downloading new headers (Drew Yavor)
  424248 In --nogui mode, exit when the last task finishes. (Eric Lauriault)
- 427165 Task pane's ETA goes crazy on new xover tasks (Charles)
+ 427165 Task pane's ETA wrong on new xover tasks (Charles)
+ 426375 Task pane's ETA wrong when selecting > 4GB of queued files (Mike)
 
 0.126 "Demon Sweat"
  420618 Decode in a worker thread for faster GUI/network (Calin Culanu)
